[package]
name = "cachem"
version = "0.1.0"
authors = ["Lars Holznagel <contact@lholznagel.info>"]
edition = "2018"

[dependencies]
async-trait = "0.1.42"
tokio = { version = "1.2.0", features = ["full"] }

cachem_derive = { path = "../derive", optional = true }
uuid = { version = "0.8.2", optional = true }

[features]
default = []
derive = ["cachem_derive"]
with-uuid = ["uuid"]
