[package]
name = "cachem_derive"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits", "full"] }

[dev-dependencies]
async-trait = "0.1.42"
tokio = { version = "1.0.2", features = ["full"] }
