[package]
name = "cachem_utils"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
async-trait = "0.1.42"
tokio = { version = "1.1.1", features = ["full"] }

cachem_derive = { path = "../derive", optional = true }
uuid = { version = "0.8.2", optional = true }

[features]
default = []
derive = ["cachem_derive"]
with-uuid = ["uuid"]
